--- a/composer.json
+++ b/composer.json
@@ -126,6 +126,7 @@
         "drupal/twig_tweak": "^3.1",
         "drupal/ultimate_cron": "^2.0@alpha",
         "drupal/video_embed_field": "^2.0",
+        "drupal/views_data_export": "^1.0",
         "drupal/viewsreference": "^2.0@alpha",
         "drupal/viewsreference_filter": "^1.0",
         "drupal/webform": "^6.0",
