--- a/config/gearwrench/local/core.extension.yml
+++ b/config/gearwrench/local/core.extension.yml
@@ -33,6 +33,7 @@ module:
   config_split: 0
   contextual: 0
   crop: 0
+  csv_serialization: 0
   ctools: 0
   current_page_crumb: 0
   datetime: 0
@@ -108,10 +109,12 @@ module:
   redirect: 0
   redirect_404: 0
   responsive_image: 0
+  rest: 0
   robotstxt: 0
   search: 0
   search_api: 0
   search_api_solr: 0
+  serialization: 0
   shortcut: 0
   simple_sitemap: 0
   smart_trim: 0
@@ -131,6 +134,7 @@ module:
   user: 0
   video_embed_field: 0
   video_embed_media: 0
+  views_data_export: 0
   views_ui: 0
   viewsreference: 0
   webform: 0
