--- a/config/gearwrench/default/views.view.products.yml
+++ b/config/gearwrench/default/views.view.products.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - field.storage.node.field_long_description
     - field.storage.node.field_new_product
+    - field.storage.node.field_product_specifications
     - node.type.product
   module:
     - csv_serialization
@@ -184,14 +185,101 @@ display:
           settings:
             link_to_entity: true
           plugin_id: field
-        type:
-          id: type
+        status:
+          id: status
           table: node_field_data
-          field: type
+          field: status
+          label: Status
+          exclude: false
+          alter:
+            alter_text: false
+          element_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          type: boolean
+          settings:
+            format: custom
+            format_custom_true: Published
+            format_custom_false: Unpublished
+          plugin_id: field
+          entity_type: node
+          entity_field: status
+        field_new_product:
+          id: field_new_product
+          table: node__field_new_product
+          field: field_new_product
           relationship: none
           group_type: group
           admin_label: ''
-          label: 'Content type'
+          label: 'New Product'
+          exclude: false
+          alter:
+            alter_text: false
+            text: ''
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: true
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          click_sort_column: value
+          type: boolean
+          settings:
+            format: default
+            format_custom_true: ''
+            format_custom_false: ''
+          group_column: value
+          group_columns: {  }
+          group_rows: true
+          delta_limit: 0
+          delta_offset: 0
+          delta_reversed: false
+          delta_first_last: false
+          multi_type: separator
+          separator: ', '
+          field_api_classes: false
+          plugin_id: field
+        field_product_specifications:
+          id: field_product_specifications
+          table: node__field_product_specifications
+          field: field_product_specifications
+          relationship: none
+          group_type: group
+          admin_label: ''
+          label: 'Product Specifications'
           exclude: false
           alter:
             alter_text: false
@@ -246,50 +334,7 @@ display:
           multi_type: separator
           separator: ', '
           field_api_classes: false
-          entity_type: node
-          entity_field: type
           plugin_id: field
-        name:
-          id: name
-          table: users_field_data
-          field: name
-          relationship: uid
-          label: Author
-          exclude: false
-          alter:
-            alter_text: false
-          element_class: ''
-          element_default_classes: true
-          empty: ''
-          hide_empty: false
-          empty_zero: false
-          hide_alter_empty: true
-          plugin_id: field
-          type: user_name
-          entity_type: user
-          entity_field: name
-        status:
-          id: status
-          table: node_field_data
-          field: status
-          label: Status
-          exclude: false
-          alter:
-            alter_text: false
-          element_class: ''
-          element_default_classes: true
-          empty: ''
-          hide_empty: false
-          empty_zero: false
-          hide_alter_empty: true
-          type: boolean
-          settings:
-            format: custom
-            format_custom_true: Published
-            format_custom_false: Unpublished
-          plugin_id: field
-          entity_type: node
-          entity_field: status
         changed:
           id: changed
           table: node_field_data
@@ -499,6 +544,48 @@ display:
           plugin_id: boolean
           entity_type: node
           entity_field: status
+        field_new_product_value:
+          id: field_new_product_value
+          table: node__field_new_product
+          field: field_new_product_value
+          relationship: none
+          group_type: group
+          admin_label: ''
+          operator: '='
+          value: All
+          group: 1
+          exposed: true
+          expose:
+            operator_id: ''
+            label: 'New Product'
+            description: ''
+            use_operator: false
+            operator: field_new_product_value_op
+            operator_limit_selection: false
+            operator_list: {  }
+            identifier: field_new_product_value
+            required: false
+            remember: false
+            multiple: false
+            remember_roles:
+              authenticated: authenticated
+              anonymous: '0'
+              administrator: '0'
+              site_administrator: '0'
+              content_editor: '0'
+          is_grouped: false
+          group_info:
+            label: ''
+            description: ''
+            identifier: ''
+            optional: true
+            widget: select
+            multiple: false
+            remember: false
+            default_group: All
+            default_group_multiple: {  }
+            group_items: {  }
+          plugin_id: boolean
         langcode:
           id: langcode
           table: node_field_data
@@ -593,7 +680,9 @@ display:
         - 'user.node_grants:view'
         - user.permissions
       max-age: 0
-      tags: {  }
+      tags:
+        - 'config:field.storage.node.field_new_product'
+        - 'config:field.storage.node.field_product_specifications'
   data_export_1:
     display_plugin: data_export
     id: data_export_1
@@ -914,4 +1003,6 @@ display:
         - 'user.node_grants:view'
         - user.permissions
       max-age: 0
-      tags: {  }
+      tags:
+        - 'config:field.storage.node.field_new_product'
+        - 'config:field.storage.node.field_product_specifications'
