added bazaar voice style sheet

--- a/docroot/themes/custom/gearwrench/gearwrench.libraries.yml
+++ b/docroot/themes/custom/gearwrench/gearwrench.libraries.yml
@@ -192,6 +192,7 @@ node--full--product:
   css:
     component:
       css/libraries/node/full--product.css: { }
+      css/contrib-overrides/bazaarvoice/bazaarvoice.css: {}
   js:
     js/libraries/node/full--product.js: {}
     https://apps.bazaarvoice.com/deployments/gearwrench/new_branding_main_site/production/en_US/bv.js: { type: external, async: true, minified: true }
