--- a/config/gearwrench/default/core.entity_view_display.node.media_page.teaser.yml
+++ b/config/gearwrench/default/core.entity_view_display.node.media_page.teaser.yml
@@ -11,7 +11,7 @@ dependencies:
     - field.field.node.media_page.field_media_type
     - field.field.node.media_page.field_published_date
     - field.field.node.media_page.field_tags
-    - image.style.small_1x1
+    - image.style.small
     - node.type.media_page
   module:
     - blazy
@@ -27,18 +27,18 @@ content:
     type: smart_trim
     weight: 1
     settings:
-      trim_length: 200
+      trim_length: 100
       trim_type: chars
       trim_suffix: ''
+      wrap_output: true
       wrap_class: trimmed
       more_text: More
       more_class: more-link
-      summary_handler: full
-      wrap_output: false
-      more_link: false
+      summary_handler: trim
       trim_options:
-        text: false
+        text: true
         trim_zero: false
+      more_link: false
     third_party_settings: {  }
     region: content
   field_media:
@@ -47,12 +47,12 @@ content:
     region: content
     label: hidden
     settings:
-      image_style: small_1x1
+      image_style: small
       responsive_image_style: ''
       media_switch: ''
       thumbnail_style: ''
       ratio: ''
-      view_mode: default
+      view_mode: teaser
       image: ''
       current_view_mode: teaser
       background: false
