--- a/docroot/themes/custom/gearwrench/gearwrench.libraries.yml
+++ b/docroot/themes/custom/gearwrench/gearwrench.libraries.yml
@@ -181,6 +181,13 @@ node--full:
     component:
       css/libraries/node/full.css: {}
 
+node--full--media-page:
+  version: 1.x
+  css:
+    component:
+      css/libraries/node/full--media-page.css: {}
+
+
 node--full--page:
   version: 1.x
   css:
@@ -236,6 +243,12 @@ node--teaser--product:
   css:
     component:
       css/libraries/node/teaser--product.css: { }
+
+node--teaser--media-page:
+  version: 1.x
+  css:
+    component:
+      css/libraries/node/teaser--media-page.css: { }
 
 # === Node: Tile === #
 
@@ -481,6 +494,12 @@ view:
   css:
     component:
       css/libraries/view/view.css: {}
+
+view--media-pages:
+  version: 1.x
+  css:
+    component:
+      css/libraries/view/media-pages.css: {}
 
 view--related-products:
   version: 1.x
