added live area to featured media and configured styles.

--- a/docroot/themes/custom/gearwrench/gearwrench.libraries.yml
+++ b/docroot/themes/custom/gearwrench/gearwrench.libraries.yml
@@ -397,6 +397,14 @@ paragraph--full--featured-media--layout-grid:
   dependencies:
     - gearwrench/paragraph--full--featured-media
 
+paragraph--full--featured-media--layout-live-area:
+  version: 1.x
+  css:
+    component:
+      css/libraries/paragraph/full--featured-media--layout-live-area.css: {}
+  dependencies:
+    - gearwrench/paragraph--full--featured-media
+
 paragraph--full--featured-media--layout-slider:
   version: 1.x
   css:
