--- a/config/gearwrench/default/core.entity_form_display.paragraph.featured_media.default.yml
+++ b/config/gearwrench/default/core.entity_form_display.paragraph.featured_media.default.yml
@@ -16,17 +16,23 @@ third_party_settings:
   field_group:
     group_settings:
       children:
-        - status
-        - field_style
-        - field_class_custom
+        - field_layout
         - field_html_anchor
+        - field_class_custom
+        - status
       parent_name: ''
       weight: 0
       format_type: settings
       format_settings:
+        visible_for_roles:
+          authenticated: authenticated
+          site_administrator: site_administrator
+          content_editor: content_editor
+          administrator: 0
         id: ''
         classes: ''
       label: Settings
+      region: content
 _core:
   default_config_hash: gmfXKhybgF4Mm0Q3rO8byqX1bq6rMCgpNe_ZU2j6ZZA
 id: paragraph.featured_media.default
@@ -35,7 +41,7 @@ bundle: featured_media
 mode: default
 content:
   field_class_custom:
-    weight: 8
+    weight: 7
     settings:
       size: 60
       placeholder: ''
@@ -43,7 +49,7 @@ content:
     type: string_textfield
     region: content
   field_html_anchor:
-    weight: 9
+    weight: 6
     settings:
       size: 60
       placeholder: 'Example: find-out-more'
@@ -51,31 +57,26 @@ content:
     type: string_textfield
     region: content
   field_layout:
-    weight: 3
+    weight: 5
     settings: {  }
     third_party_settings: {  }
     type: options_select
     region: content
   field_media_items:
     type: media_library_widget
-    weight: 4
+    weight: 1
     settings:
       media_types: {  }
     third_party_settings: {  }
     region: content
-  field_style:
-    weight: 7
-    settings: {  }
-    third_party_settings: {  }
-    type: options_select
-    region: content
   status:
     type: boolean_checkbox
-    weight: 6
+    weight: 8
     region: content
     settings:
       display_label: true
     third_party_settings: {  }
 hidden:
   created: true
+  field_style: true
   uid: true
