--- a/config/gearwrench/default/core.entity_view_display.media.image.live_area.yml
+++ b/config/gearwrench/default/core.entity_view_display.media.image.live_area.yml
@@ -1,28 +1,30 @@
-uuid: e5dfcf9a-42d4-43af-b037-b5a67bb78b69
+uuid: 363598a3-0c92-4258-8118-115b6458fbfc
 langcode: en
 status: true
 dependencies:
   config:
+    - core.entity_view_mode.media.live_area
     - field.field.media.image.field_media_image
+    - image.style.container_full_width
     - media.type.image
   module:
     - blazy
 _core:
   default_config_hash: PaZ7IN5ey3rp2fwE9LXGfW9Piq7oX4piH08FhUTI4lQ
-id: media.image.default
+id: media.image.live_area
 targetEntityType: media
 bundle: image
-mode: default
+mode: live_area
 content:
   field_media_image:
     label: visually_hidden
     settings:
-      image_style: ''
+      image_style: container_full_width
       responsive_image_style: ''
       media_switch: ''
       thumbnail_style: ''
       ratio: ''
-      current_view_mode: default
+      current_view_mode: live_area
       background: false
       caption:
         title: '0'
