updated 403 and 404 pages to nodes created on stage.

--- a/config/gearwrench/default/system.site.yml
+++ b/config/gearwrench/default/system.site.yml
@@ -3,8 +3,8 @@ name: Gearwrench
 mail: noreply@gearwrench.com
 slogan: ''
 page:
-  403: ''
-  404: ''
+  403: /node/23676
+  404: /node/23671
   front: /node/405
 admin_compact_mode: false
 weight_select_max: 100
