--- a/config/gearwrench/default/core.entity_view_display.node.product.teaser.yml
+++ b/config/gearwrench/default/core.entity_view_display.node.product.teaser.yml
@@ -49,7 +49,7 @@ content:
       media_switch: ''
       thumbnail_style: ''
       ratio: ''
-      view_mode: default
+      view_mode: product_teaser
       image: ''
       current_view_mode: teaser
       background: false
