--- a/config/gearwrench/default/field.field.node.product.field_media.yml
+++ b/config/gearwrench/default/field.field.node.product.field_media.yml
@@ -8,6 +8,8 @@ dependencies:
     - media.type.remote_video
     - media.type.video
     - node.type.product
+  content:
+    - 'media:image:14b3e79b-4cf6-4718-b0e7-a105c3daf45a'
 id: node.product.field_media
 field_name: field_media
 entity_type: node
@@ -16,7 +18,10 @@ label: 'Listing Image'
 description: ''
 required: true
 translatable: true
-default_value: {  }
+default_value:
+  -
+    weight: 0
+    target_uuid: 14b3e79b-4cf6-4718-b0e7-a105c3daf45a
 default_value_callback: ''
 settings:
   handler: 'default:media'
