Added full preproces, twig file, css, configs to allow user to view content, added product slider to content type, updated manage display

--- a/config/gearwrench/default/user.role.anonymous.yml
+++ b/config/gearwrench/default/user.role.anonymous.yml
@@ -15,6 +15,7 @@ permissions:
   - 'search content'
   - 'use text format restricted_html'
   - 'view any landing_page content'
+  - 'view any media_page content'
   - 'view any page content'
   - 'view any product content'
   - 'view any product_category content'
