--- a/config/gearwrench/default/user.role.authenticated.yml
+++ b/config/gearwrench/default/user.role.authenticated.yml
@@ -19,3 +19,4 @@ permissions:
   - 'use text format limited_html'
   - 'view any styleguide content'
   - 'view media'
+  - 'view own media_page content'
