--- a/config/gearwrench/default/field.field.node.media_page.field_components.yml
+++ b/config/gearwrench/default/field.field.node.media_page.field_components.yml
@@ -15,6 +15,7 @@ dependencies:
     - paragraphs.paragraphs_type.featured_content
     - paragraphs.paragraphs_type.featured_links
     - paragraphs.paragraphs_type.featured_media
+    - paragraphs.paragraphs_type.product_slider
     - paragraphs.paragraphs_type.pullquote
     - paragraphs.paragraphs_type.section
     - paragraphs.paragraphs_type.steps
@@ -46,6 +47,7 @@ settings:
       featured_content: featured_content
       featured_links: featured_links
       featured_media: featured_media
+      product_slider: product_slider
       pullquote: pullquote
       section: section
       steps: steps
@@ -94,8 +96,8 @@ settings:
         weight: 35
         enabled: false
       product_slider:
+        enabled: true
         weight: 36
-        enabled: false
       pullquote:
         enabled: true
         weight: 37
