VYRKCATG-101: Narrowed it further to only show products that have the same categories entirely.

--- a/config/gearwrench/default/views.view.related_products.yml
+++ b/config/gearwrench/default/views.view.related_products.yml
@@ -231,7 +231,7 @@ display:
             limit: true
             vids:
               product_classifications: product_classifications
-            anyall: +
+            anyall: ','
             term_page: '0'
           default_argument_skip_url: false
           summary_options:
