updated editor to default to full html for content editors and admin.

--- a/config/crescenttool/default/editor.editor.full_html.yml
+++ b/config/crescenttool/default/editor.editor.full_html.yml
@@ -13,6 +13,7 @@ third_party_settings:
     scheme: public
     directory: inline-files
     extensions: txt
+    max_size: ''
 format: full_html
 editor: ckeditor
 settings:
