--- a/config/crescenttool/default/user.role.content_editor.yml
+++ b/config/crescenttool/default/user.role.content_editor.yml
@@ -47,6 +47,7 @@ permissions:
   - 'update any media'
   - 'update media'
   - 'use text format basic_html'
+  - 'use text format full_html'
   - 'use text format restricted_html'
   - 'view all media revisions'
   - 'view all revisions'
