--- a/config/crescenttool/default/filter.format.full_html.yml
+++ b/config/crescenttool/default/filter.format.full_html.yml
@@ -5,9 +5,10 @@ dependencies:
   module:
     - editor
     - linkit
+    - media
 name: 'Full HTML'
 format: full_html
-weight: 1
+weight: -10
 filters:
   filter_align:
     id: filter_align
@@ -49,3 +50,12 @@ filters:
     weight: 0
     settings:
       title: true
+  media_embed:
+    id: media_embed
+    provider: media
+    status: false
+    weight: 100
+    settings:
+      default_view_mode: default
+      allowed_media_types: {  }
+      allowed_view_modes: {  }
