--- a/config/gearwrench/default/core.entity_view_display.node.media_page.block_title.yml
+++ b/config/gearwrench/default/core.entity_view_display.node.media_page.block_title.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - core.entity_view_mode.node.block_title
     - field.field.node.media_page.body
+    - field.field.node.media_page.field_categories
     - field.field.node.media_page.field_components
     - field.field.node.media_page.field_link
     - field.field.node.media_page.field_media
@@ -90,5 +91,6 @@ content:
     third_party_settings: {  }
     region: content
 hidden:
+  field_categories: true
   langcode: true
   search_api_excerpt: true
