--- a/config/gearwrench/default/core.entity_form_display.node.media_page.default.yml
+++ b/config/gearwrench/default/core.entity_form_display.node.media_page.default.yml
@@ -9,6 +9,7 @@ dependencies:
     - field.field.node.media_page.field_link
     - field.field.node.media_page.field_media
     - field.field.node.media_page.field_media_type
+    - field.field.node.media_page.field_preferred_listing_image
     - field.field.node.media_page.field_published_date
     - field.field.node.media_page.field_tags
     - node.type.media_page
@@ -41,6 +42,7 @@ third_party_settings:
         - title
         - field_media_type
         - field_media
+        - field_preferred_listing_image
         - field_published_date
         - body
         - field_link
@@ -78,7 +80,7 @@ mode: default
 content:
   body:
     type: text_textarea_with_summary
-    weight: 5
+    weight: 6
     settings:
       rows: 9
       summary_rows: 3
@@ -93,7 +95,7 @@ content:
     settings: {  }
     third_party_settings: {  }
   field_categories:
-    weight: 7
+    weight: 8
     settings:
       match_operator: CONTAINS
       match_limit: 10
@@ -124,7 +126,7 @@ content:
     type: paragraphs
     region: content
   field_link:
-    weight: 6
+    weight: 7
     settings:
       placeholder_url: ''
       placeholder_title: ''
@@ -144,14 +146,21 @@ content:
     third_party_settings: {  }
     type: options_buttons
     region: content
-  field_published_date:
+  field_preferred_listing_image:
+    type: media_library_widget
     weight: 4
+    settings:
+      media_types: {  }
+    third_party_settings: {  }
+    region: content
+  field_published_date:
+    weight: 5
     settings: {  }
     third_party_settings: {  }
     type: datetime_default
     region: content
   field_tags:
-    weight: 8
+    weight: 9
     settings:
       match_operator: CONTAINS
       match_limit: 10
