--- a/config/gearwrench/default/core.entity_view_display.node.media_page.block_title.yml
+++ b/config/gearwrench/default/core.entity_view_display.node.media_page.block_title.yml
@@ -10,6 +10,7 @@ dependencies:
     - field.field.node.media_page.field_link
     - field.field.node.media_page.field_media
     - field.field.node.media_page.field_media_type
+    - field.field.node.media_page.field_preferred_listing_image
     - field.field.node.media_page.field_published_date
     - field.field.node.media_page.field_tags
     - node.type.media_page
@@ -92,5 +93,6 @@ content:
     region: content
 hidden:
   field_categories: true
+  field_preferred_listing_image: true
   langcode: true
   search_api_excerpt: true
