--- a/config/gearwrench/default/core.entity_view_display.node.media_page.default.yml
+++ b/config/gearwrench/default/core.entity_view_display.node.media_page.default.yml
@@ -9,6 +9,7 @@ dependencies:
     - field.field.node.media_page.field_link
     - field.field.node.media_page.field_media
     - field.field.node.media_page.field_media_type
+    - field.field.node.media_page.field_preferred_listing_image
     - field.field.node.media_page.field_published_date
     - field.field.node.media_page.field_tags
     - node.type.media_page
@@ -74,6 +75,15 @@ content:
     settings: {  }
     third_party_settings: {  }
     type: list_default
+    region: content
+  field_preferred_listing_image:
+    type: entity_reference_entity_view
+    weight: 110
+    label: above
+    settings:
+      view_mode: default
+      link: false
+    third_party_settings: {  }
     region: content
   field_published_date:
     weight: 105
