--- a/config/gearwrench/default/core.entity_view_display.node.media_page.teaser.yml
+++ b/config/gearwrench/default/core.entity_view_display.node.media_page.teaser.yml
@@ -10,6 +10,7 @@ dependencies:
     - field.field.node.media_page.field_link
     - field.field.node.media_page.field_media
     - field.field.node.media_page.field_media_type
+    - field.field.node.media_page.field_preferred_listing_image
     - field.field.node.media_page.field_published_date
     - field.field.node.media_page.field_tags
     - image.style.small
@@ -26,7 +27,7 @@ content:
   body:
     label: hidden
     type: smart_trim
-    weight: 1
+    weight: 2
     settings:
       trim_length: 100
       trim_type: chars
@@ -62,6 +63,48 @@ content:
         alt: '0'
       class: ''
       id: ''
+      link: ''
+      overlay: ''
+      title: ''
+      vanilla: false
+      icon: ''
+      layout: ''
+      cache: 0
+      skin: ''
+      fx: ''
+      style: ''
+      box_caption: ''
+      box_caption_custom: ''
+      box_media_style: ''
+      box_style: ''
+      _uri: ''
+      breakpoints: {  }
+      sizes: ''
+      grid_header: ''
+      grid: 0
+      grid_medium: 0
+      grid_small: 0
+    third_party_settings: {  }
+  field_preferred_listing_image:
+    type: blazy_media
+    weight: 1
+    region: content
+    label: hidden
+    settings:
+      image_style: small
+      responsive_image_style: ''
+      media_switch: ''
+      thumbnail_style: ''
+      ratio: ''
+      view_mode: default
+      current_view_mode: teaser
+      background: false
+      caption:
+        title: '0'
+        alt: '0'
+      class: ''
+      id: ''
+      image: ''
       link: ''
       overlay: ''
       title: ''
