VYRKCATG-245: Updated the media page preferred image teaser display output.

--- a/config/gearwrench/default/core.entity_view_display.node.media_page.teaser.yml
+++ b/config/gearwrench/default/core.entity_view_display.node.media_page.teaser.yml
@@ -96,7 +96,7 @@ content:
       media_switch: ''
       thumbnail_style: ''
       ratio: ''
-      view_mode: default
+      view_mode: teaser
       current_view_mode: teaser
       background: false
       caption:
