VYRKCATG-245: Changed the media page categories to be a new taxonomy instead.

--- a/config/gearwrench/default/field.storage.node.field_category.yml
+++ b/config/gearwrench/default/field.storage.node.field_category.yml
@@ -1,18 +1,19 @@
-uuid: 3121bc45-ab0f-4415-ba36-f6e96b354b71
+uuid: 8eb1b835-a894-404a-a847-9ed4fbd94471
 langcode: en
 status: true
 dependencies:
   module:
     - node
-id: node.field_categories
-field_name: field_categories
+    - taxonomy
+id: node.field_category
+field_name: field_category
 entity_type: node
 type: entity_reference
 settings:
-  target_type: node
+  target_type: taxonomy_term
 module: core
 locked: false
-cardinality: -1
+cardinality: 1
 translatable: true
 indexes: {  }
 persist_with_no_fields: false
