--- a/config/gearwrench/default/core.entity_form_display.node.media_page.default.yml
+++ b/config/gearwrench/default/core.entity_form_display.node.media_page.default.yml
@@ -4,7 +4,7 @@ status: true
 dependencies:
   config:
     - field.field.node.media_page.body
-    - field.field.node.media_page.field_categories
+    - field.field.node.media_page.field_category
     - field.field.node.media_page.field_components
     - field.field.node.media_page.field_link
     - field.field.node.media_page.field_media
@@ -46,7 +46,7 @@ third_party_settings:
         - field_published_date
         - body
         - field_link
-        - field_categories
+        - field_category
         - field_tags
       parent_name: group_tabs
       weight: 20
@@ -94,15 +94,11 @@ content:
     region: content
     settings: {  }
     third_party_settings: {  }
-  field_categories:
+  field_category:
     weight: 8
-    settings:
-      match_operator: CONTAINS
-      match_limit: 10
-      size: 60
-      placeholder: ''
+    settings: {  }
     third_party_settings: {  }
-    type: entity_reference_autocomplete
+    type: options_select
     region: content
   field_components:
     weight: 13
