--- a/config/gearwrench/default/core.entity_view_display.node.media_page.block_title.yml
+++ b/config/gearwrench/default/core.entity_view_display.node.media_page.block_title.yml
@@ -5,7 +5,7 @@ dependencies:
   config:
     - core.entity_view_mode.node.block_title
     - field.field.node.media_page.body
-    - field.field.node.media_page.field_categories
+    - field.field.node.media_page.field_category
     - field.field.node.media_page.field_components
     - field.field.node.media_page.field_link
     - field.field.node.media_page.field_media
@@ -92,7 +92,7 @@ content:
     third_party_settings: {  }
     region: content
 hidden:
-  field_categories: true
+  field_category: true
   field_preferred_listing_image: true
   langcode: true
   search_api_excerpt: true
