--- a/config/gearwrench/default/core.entity_view_display.node.media_page.default.yml
+++ b/config/gearwrench/default/core.entity_view_display.node.media_page.default.yml
@@ -4,7 +4,7 @@ status: true
 dependencies:
   config:
     - field.field.node.media_page.body
-    - field.field.node.media_page.field_categories
+    - field.field.node.media_page.field_category
     - field.field.node.media_page.field_components
     - field.field.node.media_page.field_link
     - field.field.node.media_page.field_media
@@ -32,8 +32,8 @@ content:
     settings: {  }
     third_party_settings: {  }
     region: content
-  field_categories:
-    weight: 109
+  field_category:
+    weight: 111
     label: above
     settings:
       link: true
