--- a/config/gearwrench/default/core.entity_view_display.node.media_page.full.yml
+++ b/config/gearwrench/default/core.entity_view_display.node.media_page.full.yml
@@ -5,7 +5,7 @@ dependencies:
   config:
     - core.entity_view_mode.node.full
     - field.field.node.media_page.body
-    - field.field.node.media_page.field_categories
+    - field.field.node.media_page.field_category
     - field.field.node.media_page.field_components
     - field.field.node.media_page.field_link
     - field.field.node.media_page.field_media
@@ -33,7 +33,7 @@ content:
     settings: {  }
     third_party_settings: {  }
     region: content
-  field_categories:
+  field_category:
     type: entity_reference_label
     weight: 4
     region: content
