--- a/config/gearwrench/default/core.entity_view_display.node.media_page.search_index.yml
+++ b/config/gearwrench/default/core.entity_view_display.node.media_page.search_index.yml
@@ -5,7 +5,7 @@ dependencies:
   config:
     - core.entity_view_mode.node.search_index
     - field.field.node.media_page.body
-    - field.field.node.media_page.field_categories
+    - field.field.node.media_page.field_category
     - field.field.node.media_page.field_components
     - field.field.node.media_page.field_link
     - field.field.node.media_page.field_media
@@ -139,7 +139,7 @@ content:
     type: datetime_default
     region: content
 hidden:
-  field_categories: true
+  field_category: true
   field_components: true
   field_media_type: true
   field_tags: true
