--- a/config/gearwrench/default/core.entity_view_display.node.media_page.teaser.yml
+++ b/config/gearwrench/default/core.entity_view_display.node.media_page.teaser.yml
@@ -5,7 +5,7 @@ dependencies:
   config:
     - core.entity_view_mode.node.teaser
     - field.field.node.media_page.body
-    - field.field.node.media_page.field_categories
+    - field.field.node.media_page.field_category
     - field.field.node.media_page.field_components
     - field.field.node.media_page.field_link
     - field.field.node.media_page.field_media
@@ -128,7 +128,7 @@ content:
       grid_small: 0
     third_party_settings: {  }
 hidden:
-  field_categories: true
+  field_category: true
   field_components: true
   field_link: true
   field_media_type: true
