--- a/composer.json
+++ b/composer.json
@@ -97,6 +97,7 @@
         "drupal/menu_trail_by_path": "^1.0",
         "drupal/metatag": "^1.0",
         "drupal/metatag_async_widget": "^1.0@alpha",
+        "drupal/migrate_devel": "^2.x-dev@dev",
         "drupal/migrate_plus": "^5.1",
         "drupal/migrate_tools": "^5.0",
         "drupal/module_filter": "^3.1",
