--- a/config/gearwrench/default/core.entity_view_display.node.product_category.teaser.yml
+++ b/config/gearwrench/default/core.entity_view_display.node.product_category.teaser.yml
@@ -9,6 +9,7 @@ dependencies:
     - field.field.node.product_category.field_classification_id
     - field.field.node.product_category.field_media
     - field.field.node.product_category.field_product_classifications
+    - field.field.node.product_category.field_show_set_filter
     - node.type.product_category
   module:
     - text
@@ -36,5 +37,6 @@ hidden:
   field_classification_id: true
   field_media: true
   field_product_classifications: true
+  field_show_set_filter: true
   langcode: true
   search_api_excerpt: true
