--- a/config/gearwrench/default/core.entity_view_display.node.product_category.tile.yml
+++ b/config/gearwrench/default/core.entity_view_display.node.product_category.tile.yml
@@ -9,6 +9,7 @@ dependencies:
     - field.field.node.product_category.field_classification_id
     - field.field.node.product_category.field_media
     - field.field.node.product_category.field_product_classifications
+    - field.field.node.product_category.field_show_set_filter
     - node.type.product_category
     - responsive_image.styles.teaser
   module:
@@ -66,6 +67,7 @@ hidden:
   field_category_facets: true
   field_classification_id: true
   field_product_classifications: true
+  field_show_set_filter: true
   langcode: true
   links: true
   search_api_excerpt: true
