updated new products to only show parent terms and only terms with results.

--- a/config/gearwrench/local/core.extension.yml
+++ b/config/gearwrench/local/core.extension.yml
@@ -143,6 +143,7 @@ module:
   webform_ui: 0
   limited_field_widgets: 1
   pathauto: 1
+  selective_better_exposed_filters: 1
   views: 10
   paragraphs: 11
   blackbird: 1000
