--- a/composer.json
+++ b/composer.json
@@ -112,6 +112,7 @@
         "drupal/schema_metatag": "^2.1",
         "drupal/search_api": "^1.20",
         "drupal/search_api_solr": "^4.2",
+        "drupal/selective_better_exposed_filters": "^2.0@beta",
         "drupal/shield": "^1.0",
         "drupal/simple_sitemap": "^3.3",
         "drupal/smart_trim": "^1.1",
