--- a/config/gearwrench/default/views.view.new_products.yml
+++ b/config/gearwrench/default/views.view.new_products.yml
@@ -74,6 +74,8 @@ display:
                 select_all_none: false
                 select_all_none_nested: false
                 display_inline: 0
+                options_show_only_used: 1
+                options_show_only_used_filtered: 0
       pager:
         type: full
         options:
